Fixed spacing issue in video-editing.html.

--- a/index.css
+++ b/index.css
@@ -166,10 +166,6 @@ span:hover{
   cursor: pointer;
 }
 
-.content-video{
-  background-color: white;
-}
-
 .child-website, .child-prototype, .child-gd, .child-video-exp, .child-contact{
   border: 5px solid black;
   background-color: black;
@@ -313,6 +309,8 @@ body{
 .tab button.active {
   background-color: white;
 }
+
+
 
 .child-website, .child-prototype, .child-gd, .child-video-exp, .child-contact{
   border: 1px solid grey;
